--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./css/style.css">
+    <script src="https://kit.fontawesome.com/e9bf42216d.js" crossorigin="anonymous"></script>
     <title>TP Dom y Bom Ej5</title>
 </head>
 
@@ -20,7 +21,15 @@
     </header>
 
     <main>
-       
+        <div id="contenedorPrincipal" class="mt-5 mx-auto text-center">
+            <h2 class="" id="numeros">00:00,00</h2>
+        </div>
+        <div id="contendorBotones" class="text-center mt-5">
+            <button id="buttonStop" class="btn btn-danger mx-2"><i class="fa-solid fa-rotate-left"></i></button>
+            <button id="buttonPlay" class="btn btn-success mx-2"><i class="fa-solid fa-play"></i></button>
+            <button id="buttonPause" class="btn btn-dark mx-2"><i class="fa-solid fa-pause"></i></button>
+            <button id="buttonPlayAgain" class="btn btn-dark mx-2"><i class="fa-solid fa-play"></i></button>
+        </div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
