--- a/index.html
+++ b/index.html
@@ -25,10 +25,7 @@
             <h2 class="" id="numeros">00:00,00</h2>
         </div>
         <div id="contendorBotones" class="text-center mt-5">
-            <button id="buttonStop" class="btn btn-danger mx-2" onclick="resetear()"><i class="fa-solid fa-rotate-left"></i></button>
-            <button id="buttonPlay" class="btn btn-success mx-2" onclick="iniciar()"><i class="fa-solid fa-play"></i></button>
-            <button id="buttonPause" class="btn btn-dark mx-2" onclick="pausar()"><i class="fa-solid fa-pause"></i></button>
-            <button id="buttonPlayAgain" class="btn btn-dark mx-2" onclick="reanudar()"><i class="fa-solid fa-play"></i></button>
+            <button id="buttonPlay" class="btn btn-success mx-2" onclick="play()"><i class="fa-solid fa-play"></i></button>
         </div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
