--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <main>
         <div id="contenedorPrincipal" class="mt-5 mx-auto text-center">
-            <h2 class="" id="numeros">00:00,00</h2>
+            <h2 class="text-start" id="numeros">00:00,00</h2>
         </div>
         <div id="contendorBotones" class="text-center mt-5">
             <button id="buttonPlay" class="btn btn-success mx-2" onclick="play()"><i class="fa-solid fa-play"></i></button>
